
####   Don't forget to change the version number in configure.ac!   ####

27 Dec 2005 Performance patch TM, TMH, TML, TMHH, TMHL, TMY - Bernard van der Helm
24 Dec 2005 Add IFL SCPINFO support for zLinux zipl code - Jan Jaeger
23 Dec 2005 Fix for Windows ..\relative path shadow files - Fish
11 Dec 2005 Correction to format 1 STIDP - Jan Jaeger
10 Dec 2005 Update FAQ software prerequisite sections - Roger Bowler
09 Dec 2005 MAX_CPU_ENGINES defaults to 8 for MSVC build too - Ivan Warren
08 Dec 2005 MAX_CPU_ENGINES now defaults to 8 instead of 2 - Greg Smith
06 Dec 2005 Accept ALRF as abbreviation for ASN_AND_LX_REUSE - Roger Bowler
06 Dec 2005 Fix leapyear issue in sysepoch and format_tod - Jan Jaeger
06 Dec 2005 More logmsg cleanup - Ivan Warren
04 Dec 2005 Added real time conversions to 'clocks' display - Jay Maynard
04 Dec 2005 va_copy 'va-list' copying macro - Fish
04 Dec 2005 tape close fixes (fixes tape devinit crash) - Fish
04 Dec 2005 Made misc/56 fix compile on gcc 3 through an ugly hack - Jay Maynard
04 Dec 2005 CTCT fixes - Fish
04 Dec 2005 More proper misc/56 fix (hopefully) - Fish
04 Dec 2005 Relax SYSEPOCH restrictions - Jan Jaeger
04 Dec 2005 New clock design - Jan Jaeger
04 Dec 2005 OS X portability fixes - Jay Maynard
04 Dec 2005 misc/56: Brute force fix for segfault in some panel commands - Jay Maynard
04 Dec 2005 Fix error in sha-1 message digest - Roger Bowler
03 Dec 2005 Fix fillfnam.c problem debugged by bb5ch39t - Greg Smith
03 Dec 2005 misc/29: SHCMDOPT shell command disablement cfg stmt - Fish
03 Dec 2005 Add crypto files to VS8 vcproj file - Fish
03 Dec 2005 Fix MSVC conspawn/shell cmd glitch: CREATE_NO_WINDOW - Fish
03 Dec 2005 Temp fix to allow up to 1031 cckd devices - Greg Smith
03 Dec 2005 CMPSC no siblings check after 4th/5th child - Bernard/Jacques Dilbert
02 Dec 2005 Added 'conspawn.exe' to MSVC build (for 'sh'ell cmd) - Fish
01 Dec 2005 Volker fix to MSVC makefile for VS 8.0 "manifest" files - Fish