@@ -13,11 +13,14 @@
 
 #include "hercules.h"
 
+#include "opcode.h"
+
+#include "inline.h"
+
 #if !defined(_CLOCK_C_)
 #define _CLOCK_C_
 
 #include "clock.h"
-
 
 static double hw_steering = 0.0;  /* Current TOD clock steering rate */
 
@@ -25,9 +28,22 @@ static U64 hw_episode;           /* TOD of start of steering episode */
 
 static S64 hw_offset = 0;       /* Current offset between TOD and HW */
 
-/* Defined but not used; left in because it might be useful later
 static int clock_state = CC_CLOCK_SET;
-*/
+
+static CSR old;
+static CSR new;
+static CSR *current = &new;
+
+void csr_reset()
+{
+    new.start_time = 0;
+    new.base_offset = 0;
+    new.fine_s_rate = 0;
+    new.gross_s_rate = 0;
+    current = &new;
+    old = new;
+}
+
 
 static U64 universal_clock(void) /* really: any clock used as a base */
 {
@@ -54,6 +70,8 @@ static U64 universal_clock(void) /* really: any clock used as a base */
 
 /* The hercules hardware clock, based on the universal clock, but    */
 /* running at its own speed as optionally set by set_tod_steering()  */
+/* The hardware clock returns a unique value                         */
+static U64 base_tod_old = 0;
 U64 hw_clock(void)
 {
 U64 base_tod;
@@ -65,7 +83,17 @@ U64 base_tod;
     /* Apply the steering offset from the current steering episode */
     base_tod += (S64)(base_tod - hw_episode) * hw_steering;
 
-    return base_tod;
+    /* Ensure that the clock returns a unique value */
+    if(base_tod_old < base_tod)
+    {
+        base_tod_old = base_tod;
+        return base_tod;
+    }
+    else
+    {
+	base_tod_old += 0x10;
+        return base_tod_old;
+    }
 }
 
 
@@ -80,6 +108,29 @@ void set_tod_steering(double steering)
     hw_episode = tod_clock;
     release_lock(&sysblk.todlock);
 }
+
+
+/* Start a new episode */
+static inline void start_new_episode()
+{
+    hw_offset = hw_clock() - universal_clock();
+    current = &new;
+    hw_episode = current->start_time;
+    hw_steering = ldexp(2,-44) * (S32)(current->fine_s_rate + current->gross_s_rate);
+}
+
+
+/* Prepare for a new episode */
+static inline void prepare_new_episode()
+{
+    if(current == &new)
+    {
+        old = new;
+        current = &old;
+	new.start_time = hw_clock();
+    }
+}
+
 
 /* Ajust the epoch for all active cpu's in the configuration */
 static U64 adjust_epoch_cpu_all(U64 epoch)
@@ -109,12 +160,14 @@ double get_tod_steering(void)
 
 void set_tod_epoch(S64 epoch)
 {
+    csr_reset();
     tod_epoch = adjust_epoch_cpu_all(epoch);
 }
 
 
 void ajust_tod_epoch(S64 epoch)
 {
+    csr_reset();
     tod_epoch += epoch;
     adjust_epoch_cpu_all(tod_epoch);
 }
@@ -123,6 +176,42 @@ void ajust_tod_epoch(S64 epoch)
 S64 get_tod_epoch()
 {
     return tod_epoch;
+}
+
+
+static void set_gross_steering_rate(S32 gsr)
+{
+    obtain_lock(&sysblk.todlock);
+    prepare_new_episode();
+    new.gross_s_rate = gsr;
+    release_lock(&sysblk.todlock);
+}
+
+
+static void set_fine_steering_rate(S32 fsr)
+{
+    obtain_lock(&sysblk.todlock);
+    prepare_new_episode();
+    new.fine_s_rate = fsr;
+    release_lock(&sysblk.todlock);
+}
+
+
+static void set_tod_offset(S64 offset)
+{
+    obtain_lock(&sysblk.todlock);
+    prepare_new_episode();
+    new.base_offset = offset;
+    release_lock(&sysblk.todlock);
+}
+    
+
+static void adjust_tod_offset(S64 offset)
+{
+    obtain_lock(&sysblk.todlock);
+    prepare_new_episode();
+    new.base_offset = old.base_offset + offset;
+    release_lock(&sysblk.todlock);
 }
 
 
@@ -154,16 +243,18 @@ U64 new_clock,
 
     old_clock = tod_clock;
 
-    /* Ensure that the clock does not go backwards and always
-       returns a unique value in the microsecond range */
-    if( new_clock > tod_clock)
-        tod_clock = new_clock;
-    else
-        tod_clock += 0x10;
-
     tod_delta = tod_clock - old_clock;
     
-    /* Update the timers and check if either a clock related event has become pending */
+    /* If we are in the old episode, and the new episode has arrived
+       then we must take action to start the new episode */
+    if(current == &old && new_clock >= new.start_time)
+        start_new_episode();
+
+    /* Set the clock to the new updated value with offset applied */
+    tod_clock = new_clock + current->base_offset;
+
+    /* Update the timers and check if either a clock related event has
+       become pending */
     update_cpu_timer(tod_delta);
 
     return tod_delta;
@@ -172,6 +263,90 @@ U64 new_clock,
 
 #endif
 
+#if defined(FEATURE_TOD_CLOCK_STEERING)
+
+void ARCH_DEP(set_gross_s_rate) (REGS *regs)
+{
+S32 gsr;
+    gsr = ARCH_DEP(vfetch4) (regs->GR(1), 1, regs);
+
+    set_gross_steering_rate(gsr);
+}
+
+
+void ARCH_DEP(set_fine_s_rate) (REGS *regs)
+{
+S32 fsr;
+    fsr = ARCH_DEP(vfetch4) (regs->GR(1), 1, regs);
+
+    set_fine_steering_rate(fsr);
+}
+
+
+void ARCH_DEP(set_tod_offset) (REGS *regs)
+{
+S64 offset;
+    offset = ARCH_DEP(vfetch8) (regs->GR(1), 1, regs);
+
+    set_tod_offset(offset >> 8);
+}
+
+
+void ARCH_DEP(adjust_tod_offset) (REGS *regs)
+{
+S64 offset;
+    offset = ARCH_DEP(vfetch8) (regs->GR(1), 1, regs);
+
+    adjust_tod_offset(offset >> 8);
+}
+
+
+void ARCH_DEP(query_physical_clock) (REGS *regs)
+{
+    ARCH_DEP(vstore8) (hw_clock() << 8, regs->GR(1), 1, regs);
+}
+
+
+void ARCH_DEP(query_steering_information) (REGS *regs)
+{
+PTFFQSI qsi;
+    STORE_DW(qsi.physclk, hw_clock() );
+    STORE_DW(qsi.oldestart, old.start_time );
+    STORE_DW(qsi.oldebase, old.base_offset );
+    STORE_FW(qsi.oldfsr, old.fine_s_rate );
+    STORE_FW(qsi.oldgsr, old.gross_s_rate );
+    STORE_DW(qsi.newestart, new.start_time );
+    STORE_DW(qsi.newebase, new.base_offset );
+    STORE_FW(qsi.newfsr, new.fine_s_rate );
+    STORE_FW(qsi.newgsr, new.gross_s_rate );
+
+    ARCH_DEP(vstorec) (&qsi, sizeof(qsi)-1, regs->GR(1), 1, regs);
+}
+
+
+void ARCH_DEP(query_tod_offset) (REGS *regs)
+{
+PTFFQTO qto;
+    STORE_DW(qto.physclk, hw_clock() );
+    STORE_DW(qto.todoff, hw_offset );
+    STORE_DW(qto.ltodoff, current->base_offset );
+    STORE_DW(qto.todepoch, regs->tod_epoch);
+
+    ARCH_DEP(vstorec) (&qto, sizeof(qto)-1, regs->GR(1), 1, regs);
+}
+
+
+void ARCH_DEP(query_available_functions) (REGS *regs)
+{
+PTFFQAF qaf;
+    STORE_DW(qaf.sb[0] , 0xF0000000);        /* Functions 0x00..0x1F */
+    STORE_DW(qaf.sb[1] , 0x00000000);        /* Functions 0x20..0x3F */
+    STORE_DW(qaf.sb[0] , 0xF0000000);        /* Functions 0x40..0x5F */
+    STORE_DW(qaf.sb[0] , 0x00000000);        /* Functions 0x60..0x7F */
+
+    ARCH_DEP(vstorec) (&qaf, sizeof(qaf)-1, regs->GR(1), 1, regs);
+}
+#endif /*defined(FEATURE_TOD_CLOCK_STEERING)*/
 
 #if !defined(_GEN_ARCH)
 
